--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,3 +1,8 @@
+.form-row-spacebetween {
+  display: flex;
+  justify-content: space-between;
+}
+
 *,
 *::after,
 *::before {
@@ -33,16 +38,76 @@ input,
 select {
   height: 4rem;
   border-radius: 10px;
-  border: none;
+  border: 1px solid #afb1bd;
   padding: 0 1rem;
   width: 100%;
   margin-top: 0.8rem;
+}
+input:focus,
+select:focus {
+  outline: 1px solid #808080;
+}
+
+[type=radio] {
+  width: 3rem;
+  height: 3rem;
+  margin: 0;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border-radius: 50%;
+  cursor: pointer;
+  border: 1px solid #2a2a2a;
+}
+[type=radio]:checked {
+  box-shadow: inset 0 0 0 7px #2a2a2a;
+}
+[type=radio]:focus {
+  outline: none;
+}
+
+input::-moz-placeholder {
+  color: #afb1bd;
+}
+
+input:-ms-input-placeholder {
+  color: #afb1bd;
+}
+
+input::placeholder {
+  color: #afb1bd;
+}
+
+select {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  cursor: pointer;
+  background-color: transparent;
+}
+select:invalid {
+  color: #afb1bd;
+}
+select option:not(:first-of-type) {
+  color: #2a2a2a;
+}
+
+button {
+  height: 4.6rem;
+  border: none;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
 }
 
 .form__title {
   font-size: 2.4rem;
   margin-top: 3.2rem;
   margin-bottom: 0.8rem;
+}
+
+.form-group {
+  padding-top: 1rem;
 }
 
 label {
@@ -128,7 +193,7 @@ header .nav a {
   display: block;
   text-align: center;
   padding: 2rem 0;
-  border-bottom: 2px solid #afb1bd;
+  border-bottom: 2px solid #e5e5e5;
   font-size: 1.6rem;
   color: rgba(42, 42, 42, 0);
   transition: color 0.3s ease-in 0.3s;
@@ -219,7 +284,7 @@ header .features svg {
 }
 main {
   margin: 3rem auto 0 auto;
-  background-color: blanchedalmond;
+  border: 1px solid orangered;
   width: 95%;
 }
 @media screen and (min-width: 375px) {
@@ -287,9 +352,254 @@ main .form .stepper__circle {
 main .form .stepper__circle span {
   color: #afb1bd;
 }
+main .form__title {
+  grid-column: 1/-1;
+}
 main .form__address {
   background-color: yellowgreen;
+  position: relative;
+}
+main .form__address--salution {
+  width: 35%;
+  display: inline-block;
+  position: relative;
+  z-index: 0;
+}
+main .form__address--salution::after {
+  position: absolute;
+  content: "";
+  border-style: solid;
+  border-width: 6px 5px 0 5px;
+  border-color: #2a2a2a transparent transparent transparent;
+  right: 1rem;
+  top: 50%;
+  z-index: -1;
+}
+main .form__address--name {
+  display: inline-block;
+  width: 58%;
+  margin-left: auto;
+  position: absolute;
+  right: 0;
+}
+@media screen and (min-width: 375px) {
+  main .form__address--name {
+    position: static;
+    width: 100%;
+  }
+}
+main .form__address--city {
+  position: relative;
+  z-index: 0;
+}
+main .form__address--city::after {
+  position: absolute;
+  content: "";
+  border-style: solid;
+  border-width: 6px 5px 0 5px;
+  border-color: #2a2a2a transparent transparent transparent;
+  right: 1rem;
+  top: 50%;
+  z-index: -1;
+}
+@media screen and (min-width: 375px) {
+  main .form__address {
+    grid-column: 1/7;
+    grid-row: 2/3;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-column-gap: 2.7027027027%;
+  }
+  main .form__address--salution {
+    width: 100%;
+    grid-column: 1/3;
+  }
+  main .form__address--name {
+    width: 100%;
+    grid-column: 3/-1;
+  }
+  main .form__address--phone {
+    grid-column: 1/4;
+  }
+  main .form__address--email {
+    grid-column: 4/-1;
+  }
+  main .form__address--city {
+    grid-column: 1/3;
+  }
+  main .form__address--address {
+    grid-column: 3/-1;
+  }
+}
+@media screen and (min-width: 375px) {
+  main .form__delivery {
+    grid-column: 1/7;
+    grid-row: 2/3;
+    background-color: goldenrod;
+    z-index: 99;
+  }
+}
+main .form__delivery .form-group {
+  border: 1px solid red;
+  cursor: pointer;
+  display: grid;
+  padding: 1.2rem 2rem;
+  grid-template-columns: 3rem repeat(4, 1fr);
+  grid-column-gap: 2rem;
+}
+main .form__delivery .form-group input {
+  grid-row: 1/3;
+  align-self: center;
+}
+main .form__delivery .form-group span {
+  padding: 2px 0;
+  color: #2a2a2a;
+  font-size: 1.4rem;
+}
+main .form__delivery .form-group span:nth-of-type(1n) {
+  grid-column: 2/4;
+}
+main .form__delivery .form-group span:nth-of-type(2n) {
+  grid-column: 2/-1;
+}
+main .form__delivery .form-group span:nth-of-type(3n) {
+  grid-column: 4/-1;
+  grid-row: 1/2;
+  justify-self: end;
+}
+main .form__payment {
   grid-column: 1/7;
   grid-row: 2/3;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-column-gap: 2.7027027027%;
+  z-index: 199;
+  background-color: blueviolet;
+}
+main .form__payment--card-name {
+  grid-column: 1/5;
+}
+main .form__payment--card-num {
+  grid-column: 1/5;
+}
+main .form__payment--expire {
+  grid-column: 1/4;
+}
+main .form__payment--CVC {
+  grid-column: 4/-1;
+}
+@media screen and (min-width: 375px) {
+  main .form .shop-bag {
+    grid-column: 7/-1;
+    grid-row: 1/4;
+    border: 1px solid #f0f0f5;
+    border-radius: 5px;
+    padding-top: 7rem;
+  }
+}
+main .form .shop-bag__title {
+  font-size: 1.8rem;
+  display: none;
+}
+@media screen and (min-width: 375px) {
+  main .form .shop-bag__title {
+    display: block;
+  }
+}
+main .form .shop-bag__item {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, -webkit-min-content);
+  grid-template-rows: repeat(3, min-content);
+  grid-row-gap: 1.6rem;
+  margin: 1rem 0;
+  font-size: 1.6rem;
+}
+@media screen and (min-width: 375px) {
+  main .form .shop-bag__item {
+    margin: 3.4rem 0;
+    grid-template-columns: 12rem 1fr -webkit-min-content;
+    grid-template-columns: 12rem 1fr min-content;
+  }
+}
+main .form .shop-bag__item .quantity {
+  font-size: 1.4rem;
+}
+main .form .shop-bag__item img {
+  display: block;
+  width: 10rem;
+  height: 10rem;
+  grid-row: 1/4;
+}
+main .form .shop-bag__product-title, main .form .shop-bag__product-counter, main .form .shop-bag__item-price {
+  justify-self: end;
+}
+@media screen and (min-width: 375px) {
+  main .form .shop-bag__product-title, main .form .shop-bag__product-counter, main .form .shop-bag__item-price {
+    justify-self: start;
+  }
+}
+@media screen and (min-width: 375px) {
+  main .form .shop-bag__item-price {
+    grid-column: 3/4;
+    grid-row: 1/2;
+  }
+}
+main .form .shop-bag__product-counter {
+  width: 11rem;
+  align-items: center;
+}
+main .form .shop-bag__product-counter .counter-btn {
+  width: 2.4rem;
+  height: 2.4rem;
+  border-radius: 50%;
+  text-align: center;
+  background-color: #f0f0f5;
+}
+main .form .shop-bag__amount {
+  font-size: 1.4rem;
+}
+main .form .shop-bag__amount div {
+  border-top: 1px solid #e5e5e5;
+  padding: 1.6rem 0;
+}
+main .form .shop-bag__amount-text {
+  color: #afb1bd;
+}
+main .form__control {
+  padding-top: 2.4rem;
+}
+@media screen and (min-width: 375px) {
+  main .form__control {
+    grid-column: 1/7;
+    grid-row: 3/4;
+    border-top: 1px solid #e5e5e5;
+    margin-top: auto;
+  }
+}
+main .form__control button {
+  width: 50%;
+}
+@media screen and (min-width: 850px) {
+  main .form__control button {
+    width: 32.463%;
+  }
+}
+main .form__control span {
+  padding: 0 1rem;
+}
+main .form__control--prev {
+  transition: all 0.2s ease-in;
+}
+main .form__control--prev:hover {
+  background-color: #808080;
+}
+main .form__control--next {
+  background-color: #f67599;
+  transition: all 0.2s ease-in;
+  color: #ffffff;
+}
+main .form__control--next:hover {
+  background-color: #ff477b;
 }
 /*# sourceMappingURL=main.css.map */
