--- a/src/scss/_main-forms.scss
+++ b/src/scss/_main-forms.scss
@@ -2,7 +2,7 @@
 
 main {
   margin: 3rem auto 0 auto;
-  background-color: blanchedalmond;
+  border: 1px solid orangered;
   width: 95%;
 
   @include respond($bp-first) {
@@ -35,7 +35,7 @@ main {
 
       &__text {
         display: none;
-        color: $font-color-light;
+        color: $gray-light;
         font-size: 1.6rem;
 
         @include respond($bp-second) {
@@ -44,7 +44,7 @@ main {
       }
 
       &__line {
-        background-color: $font-color-light;
+        background-color: $gray-light;
         width: 6rem;
         height: 1px;
       }
@@ -52,7 +52,7 @@ main {
       &__circle {
         width: 3.2rem;
         height: 3.2rem;
-        border: 1px solid $font-color-light;
+        border: 1px solid $gray-light;
         border-radius: 50%;
         @include flexCenter;
 
@@ -62,15 +62,263 @@ main {
         }
 
         span {
-          color: $font-color-light;
+          color: $gray-light;
         }
       }
     }
 
+    &__title {
+      grid-column: 1/-1;
+    }
+
     &__address {
       background-color: yellowgreen;
+      position: relative;
+
+      &--salution {
+        width: 35%;
+        display: inline-block;
+        @include dropdownIcon;
+      }
+      &--name {
+        display: inline-block;
+        width: 58%;
+        margin-left: auto;
+        position: absolute;
+        right: 0;
+        @include respond($bp-first){
+          position: static;
+          width: 100%;
+        }
+      }
+
+      &--city {
+        @include dropdownIcon
+      }
+        //////////////////// 寄送地址 RWD /////////////
+      @include respond($bp-first) {
+        grid-column: 1/7;
+        grid-row: 2/3;
+      
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-column-gap: $col-gap;
+
+        &--salution {
+          width: 100%;
+          grid-column: 1/3;
+        }
+
+        &--name {
+          width: 100%;
+          grid-column: 3/-1;
+        }
+
+        &--phone {
+          grid-column: 1/4;
+        }
+
+        &--email {
+          grid-column: 4/-1;
+        }
+
+        &--city {
+          grid-column: 1/3;
+        }
+
+        &--address {
+          grid-column: 3/-1;
+        }
+      }
+    }
+
+    &__delivery {
+      @include respond($bp-first){
+        grid-column: 1/7;
+        grid-row: 2/3;
+        background-color: goldenrod;
+        z-index: 99;
+      }
+
+      .form-group {
+        border: 1px solid red;
+        cursor: pointer;
+        display: grid;
+        padding: 1.2rem 2rem;
+        grid-template-columns: 3rem repeat(4,1fr);
+        grid-column-gap: 2rem;
+
+        input {
+          grid-row: 1/3;
+          align-self: center;
+        }
+
+        span {
+          padding: 2px 0;
+          color: $gray-dark;
+          font-size: 1.4rem;
+        }
+        span:nth-of-type(1n) {
+          grid-column: 2/4;
+        }
+
+        span:nth-of-type(2n){
+          grid-column: 2/-1;
+        }
+        span:nth-of-type(3n) {
+          grid-column: 4/-1;
+          grid-row: 1/2;
+          justify-self: end;
+        }
+      }
+    }
+
+    &__payment {
       grid-column: 1/7;
       grid-row: 2/3;
+
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      grid-column-gap: $col-gap;
+      z-index: 199;
+      background-color: blueviolet;
+
+      &--card-name {
+        grid-column: 1/5;
+      }
+
+      &--card-num {
+        grid-column: 1/5;
+      }
+
+      &--expire {
+        grid-column: 1/4;
+      }
+      &--CVC {
+        grid-column: 4/-1;
+      }
+    }
+
+    .shop-bag {
+      @include respond($bp-first) {
+        grid-column: 7/-1;
+        grid-row: 1/4;
+        border: 1px solid $bg-gray;
+        border-radius: 5px;
+        padding-top: 7rem;
+      }
+    
+      &__title {
+        font-size: 1.8rem;
+        display: none;
+        @include respond($bp-first){
+          display: block;
+        }
+      }
+
+      &__item {
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: repeat(3,min-content);
+        grid-row-gap: 1.6rem;
+        margin: 1rem 0;
+
+        font-size: 1.6rem;
+        
+        @include respond($bp-first){
+          margin: 3.4rem 0;
+          grid-template-columns: 12rem 1fr min-content;
+        }
+
+        .quantity {
+          font-size: 1.4rem;
+        }
+
+        img {
+          display: block;
+          width: 10rem;
+          height: 10rem;
+          grid-row: 1/4;
+        }
+      }
+
+      &__product-title,
+      &__product-counter,
+      &__item-price {
+        justify-self: end;
+        @include respond ($bp-first){
+          justify-self: start;
+        }
+      }
+
+      &__item-price {
+        @include respond($bp-first){
+          grid-column: 3/4;
+          grid-row: 1/2;
+        }
+      }
+
+      &__product-counter {
+        width: 11rem;
+        align-items: center;
+        .counter-btn {
+          width: 2.4rem;
+          height: 2.4rem;
+          border-radius: 50%;
+          text-align: center;
+          background-color: $bg-gray;
+        }
+      }
+
+
+      &__amount {
+        font-size: 1.4rem;
+        div {
+          border-top: 1px solid $border-color;
+          padding: 1.6rem 0;
+        }
+
+        &-text {
+          color: $gray-light;
+        }
+      }
+    }
+
+    &__control {
+      padding-top: 2.4rem;
+      @include respond($bp-first){
+        grid-column: 1/7;
+        grid-row: 3/4;
+        border-top: 1px solid $border-color;
+        margin-top: auto;
+      }
+
+      button {
+        width: 50%;
+        @include respond($bp-second){
+          width: 32.463%;
+        }
+      }
+
+      span {
+        padding: 0 1rem;
+      }
+      
+      &--prev {
+        transition: all .2s ease-in;
+        &:hover {
+          background-color: $gray-medium;
+        }
+      }
+
+      &--next {
+        background-color: #f67599;
+        transition: all .2s ease-in;
+        color: $white;
+        &:hover{
+          background-color: #ff477b;
+        }
+      }
     }
   }
 }
