--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,6 @@
-@import './variables';
-@import './base';
-@import './darkmode';
-@import './header';
-@import './main-forms';
-@import './footer'
+@import "./variables";
+@import "./base";
+@import "./darkmode";
+@import "./header";
+@import "./main-forms";
+@import "./footer";
